# blog

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  Rocket.toml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml
.github/workflows/: push-articles.yml
articles/: 0.json  0.txt  1.json  2.json  articles_data.json  test-article-1.json  test-formatting.json
articles/md/: about-me.md  build-a-blog.md  single-transferable-vote.md  test-formatting.md  test-gh-actions.md  test-syntax-hl.md
nginx/: nginx.conf
prometheus/: prometheus.yaml
src/: article.rs  get_article.rs  get_blog.rs  hot_reload.rs  main.rs  submit_article.rs
static/: error.html  index.html  upload_form.html
styles/: article.css  global.css  styles.css
templates/: article.html.hbs  articles.html.hbs  home.html.hbs  index.html.hbs  post.html.hbs  success.html.hbs  upload_form.html.hbs
