[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
serde_json = { version = "1.0" }
scrypt = "0.8"
pulldown-cmark = "0.9.1"
chrono = "0.4"
lazy_static = "1.4.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]