[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
pulldown-cmark = "0.9.1"
katex = "0.4"
regex = "1"
chrono = "0.4"
lazy_static = "1.4.0"

[dependencies.adler]
version = "1.0"
features = ["std"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]